[package]
name = "mini-blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
# Helpers
anyhow = "1"
thiserror = "1"
alloy-primitives = { git = "https://github.com/alloy-rs/core", features = ["serde"] }
clap = { version = "4.4.7", features = ["derive"] }
bytes = "1"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Networking
tokio = { version = "1", features = ["full"] }

# Crypto
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
k256 = { version = "0.13.1", default-features = false, features = ["ecdsa", "std"] }
elliptic-curve = "0.13.6"

# Tracing
tracing = "0.1"
tracing-subscriber = "0.3"
